--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -94,16 +94,41 @@ jobs:
           # Get the changes for the PR description
           CHANGES=$(git log --pretty=format:"* %s" fork_upstream..$SYNC_BRANCH)
           
-          # Create PR with detailed changes
-          PR_NUMBER=$(gh pr create \
+          # Create PR and extract the number from the URL
+          PR_URL=$(gh pr create \
             --base fork_upstream \
             --head $SYNC_BRANCH \
             --title "⬆️ Sync with upstream $UPSTREAM_VERSION" \
             --body "Automated PR to sync with upstream repository changes.
 
           ### Changes from upstream:
-          $CHANGES" \
-            --json number -q .number)
+          $CHANGES")
+          
+          # Extract PR number from URL - format is https://github.com/owner/repo/pull/NUMBER
+          PR_NUMBER=$(echo $PR_URL | grep -o '[0-9]*
+
+      - name: Create issue on failure
+        if: failure()
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          ISSUE_BODY="The automated upstream sync workflow failed.
+
+          ### Error Details
+          Please check the workflow logs for more information:
+          ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+          ### Manual Steps Required
+          1. Review the error logs
+          2. Resolve any conflicts
+          3. Re-run the sync workflow
+
+          @${{ github.repository_owner }}"
+
+          gh issue create \
+            --title "🔄 Upstream Sync Failed $(date +%Y-%m-%d)" \
+            --body "$ISSUE_BODY" \
+            --label sync-failed)
             
           # Create a linked issue that will close when the PR is merged
           ISSUE_BODY="This issue tracks the upstream sync PR #${PR_NUMBER}.
