--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -138,10 +138,7 @@ jobs:
             echo "Generated enhanced PR description using $LLM_MODEL"
           else
             # Use default PR description
-            PR_DESCRIPTION="Automated PR to sync with upstream $UPSTREAM_VERSION.
-
-### Changes from upstream:
-$CHANGES"
+            PR_DESCRIPTION="Automated PR to sync with upstream ${UPSTREAM_VERSION}.\\n\\n### Changes from upstream:\\n${CHANGES}"
             echo "Using default PR description"
           fi
           
@@ -151,7 +148,7 @@ $CHANGES"
             --base fork_upstream \
             --head $SYNC_BRANCH \
             --title "⬆️ Sync with upstream $UPSTREAM_VERSION" \
-            --body "$PR_DESCRIPTION")
+            --body "${PR_DESCRIPTION}")
           
           echo "PR created: $PR_URL"
           
