--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -20,6 +20,16 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.PAT_TOKEN }}
 
+      - name: Install Trivy
+        run: |
+          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.49.1
+
+      - name: Setup Python and PR Generator
+        if: env.USE_LLM == 'true'
+        run: |
+          python -m pip install --upgrade pip
+          pip install pr-generator-agent
+
       - name: Configure Git
         run: |
           git config user.name "github-actions[bot]"
@@ -108,24 +118,25 @@ jobs:
             USE_LLM=true
             LLM_MODEL="claude-3.5-sonnet"
             echo "Using Anthropic Claude 3.5 Sonnet for PR description generation"
+            echo "USE_LLM=true" >> $GITHUB_ENV
           # Check for Azure OpenAI API key
           elif [[ -n "$AZURE_API_KEY" && -n "$AZURE_API_BASE" ]]; then
             USE_LLM=true
             LLM_MODEL="azure/gpt-4o"
             echo "Using Azure OpenAI GPT-4o for PR description generation"
+            echo "USE_LLM=true" >> $GITHUB_ENV
           # Check for OpenAI API key
           elif [[ -n "$OPENAI_API_KEY" ]]; then
             USE_LLM=true
             LLM_MODEL="gpt-4"
             echo "Using OpenAI GPT-4 for PR description generation"
+            echo "USE_LLM=true" >> $GITHUB_ENV
           else
             echo "No LLM API keys found. Using default PR description."
+            echo "USE_LLM=false" >> $GITHUB_ENV
           fi
           
           if [[ "$USE_LLM" == "true" ]]; then
-            echo "Installing aipr tool..."
-            pip install pr-generator-agent
-            
             # Generate PR description using aipr
             echo "Generating PR description using $LLM_MODEL..."
             # Save current branch and target for reference
